--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format": "prettier --config .prettierrc.json --write 'src/**/*.js'"
+  },
+  "devDependencies": {
+    "prettier": "^2.3.0"
   },
   "eslintConfig": {
     "extends": [
